k8s-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-name-api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ms-name-api
  template:
    metadata:
      labels:
        component: ms-name-api
    spec:
      containers:
        - name: ms-name-api
          image: hub.docker.com/ms-name-api:{BUILD_NO}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
