k8s-service.yml
apiVersion: v1
kind: Service
metadata:  
  name: ticket-api
spec:
  ports:
  - port : 80
    protocol: TCP
    targetPort: 80
  selector:
    component: ticket-api
  type: ClusterIP
