k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  name: ticket-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"    
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /ns-ms-name
        pathType: Prefix
        backend:
          service:
            name: ticket-api
            port:
              number: 80
